styles/mobile.css
/* Index (search "|| <style>" to find associated styles) */
/* || MOBILE - Styles that remove components not used in mobile */
/* || GENERAL - Definitions for base behavior of HTML elements */ 
/* || SITE - Classes that are used on almost all pages throughout site */
/* || LANDING - Index landing page */
/* || NAV - Styles for the top nav bar */
/* || PAGE - Classes that define layout for the containers of the book pages and the nav bar */
/* || HEADER - Header for all pages besides landing page */
/* || PAGE - Classes that define layout for the containers of the book pages and the nav bar */
/* || CHAPTER - Chapter landing pages */
/* || SECTION -  Styles for every page of the book that is a section */
/* || MODAL - "Learn more" modals (also used in about project page) */
/* || CONTROLS - Styles that apply to the view/nav controls at the bottom of mobile screens */
/* || APPENDIX - Appendix pages at end of book */
/* || PROFILES - Classes specific to profiles appendix page */
/* || REFERENCES - Classes specific to references appendix page */

/* || GENERAL styles */
body {
    margin: 0;
    font-family: sans-serif;
}

h1, h2, button {
    font-size: 100%;
}

h1, h2 {
    -webkit-margin-before: 0;
    -webkit-margin-after: 0;
    margin-block-start: 0;
    margin-block-end: 0;
}

ol, ul {
    padding-inline-start: 0;
    margin-block-start: 0;
    margin-block-end: 0;
    list-style: none;
}

a {
    text-decoration: none;
}

blockquote {
    margin-inline-end: 0;
    margin-inline-start: 0;
}

/* || SITE wide */
.preload * {
    -webkit-transition: none !important;
    -moz-transition: none !important;
    -ms-transition: none !important;
    -o-transition: none !important;
}

/* Recommended styling for screen readers by webaim.org */
.sr-only {
    position:absolute;
    left:-10000px;
    top:auto;
    width:1px;
    height:1px;
    overflow:hidden;
}

.main-color-background {
    background-color: #15404e;
}

.hidden {
    visibility: hidden;
}

.dark-background-text {
    background-color: #363636;
    color: #f5f5f5;
}

.dark-background-text a {
    color: #5caac5;
    text-decoration: underline;
}

#nonTextContent, footer, .book-page-nav, .header-logo, .book-section-text-close-button, 
.book-section-text-divider, .book-section-text-open-button {
    display: none;
}

/* || NAV styles */
.nav-menu {
    position: fixed;
    height: 0%;
    padding: 0;
    box-sizing: border-box;
    background-color: #f5f5f5;
    overflow: auto;
    z-index: 1;
    opacity: 0;
    color: #363636;
    transition: none;

    /* Remove scroll bar for different types of browsers */
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

.nav-menu a {
    color: inherit;
}

/* Remove scroll bar for different types of browsers */
.nav-menu::-webkit-scrollbar {
    display: none;
}

.nav-menu-chapter h1 {
    padding: 0.75em 0 0.75em 0.75em;
}

.nav-menu-chapter-title {
    font-weight: 300;
}

.nav-menu-sections {
    padding-inline-start: 1em;
}

.nav-menu-section-entry {
    padding: 0.75em 0 0.75em 0.75em;
}

.nav-menu-section-number {
    font-weight: 600;
}

.nav-menu-ch1-on, .nav-menu-ch1-background:hover {
    background-color: #a7a9ac;
}

.nav-menu-ch2-on, .nav-menu-ch2-background:hover {
    background-color: #bcd3ed;
}

.nav-menu-ch3-on, .nav-menu-ch3-background:hover {
    background-color: #9ac3c7;
}

.nav-menu-ch4-on,  .nav-menu-ch4-background:hover {
    background-color: #99bd99;
}

.nav-menu-ch5-on, .nav-menu-ch5-background:hover {
    background-color: #ffef99;
}

.nav-menu-ch6-on,  .nav-menu-ch6-background:hover {
    background-color: #ffc799;
}

.nav-menu-ch7-on,  .nav-menu-ch7-background:hover {
    background-color: #fab19c;
}

.nav-menu-ch8-on, .nav-menu-ch8-background:hover {
    background-color: #e0a1a4;
}

.nav-menu-ch9-on, .nav-menu-ch9-background:hover {
    background-color: #c29db2;
}

.nav-menu-ch10-on, .nav-menu-ch10-background:hover {
    background-color: #baafcc;
}

@media(min-width:320px) {
    /* || GENERAL styles */
    html {
        -webkit-text-size-adjust: none;
    }

    /* || LANDING styles*/
    .landing-page-container {
        position: fixed;
        height: 100%;
        background-image: url(../img/backgroundImage.jpg);
        background-repeat: no-repeat;
        background-position: center;
        background-size: cover;
    }

    .landing-page-background-overlay {
        height: 100%;
        background-color: rgba(0,0,0,0.6);
        box-sizing: border-box;
        padding: 20px 0;
    }

    .landing-page-logo {
        position: relative;
        width: 350px;
        height: 65px;
    }

    .landing-page-logo img {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        height: 60%;
    }

    .landing-page-text {
        color: #f5f5f5;
        padding: 0 5%;
        margin-top: 15%;
    }
    
    .landing-page-text h1 {
        font-family: serif;
        font-size: 2.25em;
        margin-bottom: 0.5em;
        line-height: 1.05em;
    }
    
    .landing-page-text h2 {
        font-weight: 300;
        font-size: 1.5em;
    }

    .landing-page-blurb {
        line-height: 1.55em;
        margin-bottom: 1em;
        font-weight: 300;
    }

    .landing-page-start-button {
        display: block;
        color: #f5f5f5;
        background-color: #24788f;
        width: -moz-fit-content;
        width: fit-content;
        padding: 0.25em 2em;
        font-family: system-ui;
        font-size: 1em;
        height: 40px;
        line-height: 2.25;
    }

    .landing-page-start-button span {
        display: none;
    }

    /* || HEADER styles */
    header {
        position: fixed;
        top: 0;
        z-index: 1;
        width: 100%;
        height: 56px;
        display: flex;
        padding: 0 12px;
        box-sizing: border-box;
        justify-content: space-between;
        align-items: center;
    }

    .header-nav-button {
        border: none;
        font-size: 32px;
        padding: 0;
        color: #ffffff;
    }

    .header-title-mobile {
        color: #ffffff;
        font-size: 24px;
        font-weight: 900;
    }

    header a {
        display: inline-block;
        width: 20px;
        transform: translateY(20%);
    }

    .header-logo-mobile {
        width: 100%;
    }

    /* || NAV styles */
    .nav-menu {
        top: 56px;
        bottom: 56px;
        width: 65%;
    }
}

@media(min-width:480px) {

    /* || LANDING styles*/
    .landing-page-container {
        position: relative;
        height: 100vh;
    }

    .landing-page-text {
        margin-top: 1%;
    }

    .landing-page-background-overlay {
        height: 100vh;
    }

    /* || NAV styles */
    .nav-menu {
        bottom: 0;
    }
}

@media (min-width:800px) {
    /* || CHAPTER styles */
    .book-chapter-content {
        height: 100%;
        background: rgb(113 113 113);
        position: fixed;
    }

    .book-chapter-text-section {
        flex: 0 0 90%;
        max-width: 90%;
    }

    .book-chapter-quote {
        font-size: 1em;
    }

    .book-chapter-title {
        font-size: 4em;
    }

    /* || SECTION styles */
    .book-section-non-text-content {
        width: 100%;
        background: rgb(113 113 113);
        position: fixed;
        height: 100vh;
    }

    video {
        width: 90%;
        margin: auto;
        position: fixed;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    }

    .book-section-text {
        position: relative;
        width: 100%;
        padding: 1em 0;
        transform: initial;
        max-height: initial;
        height: initial;
        padding: 72px 0;
        top: initial;
    }

    #textContent .video-citation {
        order: 100;
    }

    .book-section-learn-more {
        display: block;
        margin-bottom: 1em;
    }

    .book-section-learn-more-buttons {
        justify-content: left;
    }

    .book-section-learn-more-buttons button {
        padding: 0.625em 2em;
        margin: 0.3125em 0.625em 0.3125em 0;
    }

    /* || MODAL styles */
    .subsection-modal-overlay {
        position: fixed;
        z-index: 100;
    }

    .subsection-modal-container {
        position: fixed;
        max-width: 82.5%;
        max-height: 90%;
        overflow: auto;
    }

    .modal-exit-button-mobile {
        display: block;
        flex: 1 0 auto;
        border: none;
        font-size: 1.5em;
        font-weight: 900;
        padding: 0;
        margin-left: auto;
    }

    .subsection-modal-text {
        overflow: initial;
    }

    /* || CONTROLS styles */
    .page-controls-mobile {
        display: flex;
        justify-content: space-between;
        background: rgb(80 80 80);
        padding: 0.5em 0;
        position: fixed;
        bottom: 0;
        width: 100%;
        z-index: 10;
    }

    .page-controls-nav {
        font-size: 2.1em;
        color: rgb(255 255 255);
        margin: 0 1rem;
        line-height: initial;
    }

    .page-controls-button {
        color: rgb(255 255 255);
        border: none;
        padding: 0;
        font-weight: 600;
        font-size: 1.5em;
    }

    /* || APPENDIX styles */
    .book-appendix-page {
        height: initial;
    }

    .book-appendix-inner {
        padding: 0 1em;
        margin: 5em auto;
    }

    .book-appendix-page h1 {
        font-size: 1.75em;
    }

    .book-apendix-li-header {
        margin-bottom: 1em;
    } 

    .book-appendix-li-header h2 {
        font-size: 1.25em;
    }

    .book-features-ref-list {
        padding-left: 0.75em;
    }

    /* || PROFILES styles */
    .book-profiles-bio img {
        max-height: 200px;
    }

    .book-profile-blurb {
        max-height: 200px;
    }

    /* || REFERENCES styles */
    .csl-right-inline a {
        word-break: break-all;
    }
}

@media (min-height:9999px) {
    .landing-page-container {
        position: relative;
        height: 100vh;
    }

    .landing-page-logo {
        position: relative;
        margin-bottom: 3.5em;
    }

    .landing-page-text {
        bottom: 5%;
        position: relative;
    }

    .book-chapter-text-section {
        flex-direction: row;
        align-items: center;
        flex: 0 0 95%;
        justify-content: space-between;
    }

    .book-chapter-quote {
        width: 45%;
    }

    video {
        width: 50%;
    }

    .book-section-text {
        padding-bottom: 1em;
    }

    .subsection-modal-container {
        max-width: 90%;
        max-height: 80%;
    }

    .page-controls-mobile {
        position: initial;
    }
}

  @media (orientation: portrait) {
    .book-profiles-bio {
        flex-direction: column;
    }

    .book-profiles-bio img {
        margin: 0 auto;
    }

    .book-profile-blurb {
        max-height: initial;
        overflow: initial;
        text-align: left;
    }
}

